fix readability and layout

--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -15,7 +15,7 @@
   height: auto;
   /* sticky footer fix end */
   margin-top: 3em;
-  color: mix(#fff, $gray, 25%);
+  color: #fff;
   /*color: $purple-mountain;*/
   -webkit-animation: intro 0.3s both;
           animation: intro 0.3s both;
